[package]
name = "alkahest-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "alkahest_py"
crate-type = ["cdylib"]

[dependencies]
alkahest-rs = { version = "0.1.0", path = "../alkahest-rs" }
alloy = "0.9.2"
pyo3 = "0.23.3"
